--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
   <h1>URL Shortener!</h1>
   <div id="navigation">
     <ul>
-      <li><a href="{% url 'lists:home' %}">Home</a></li>
+      <li><a href="{% url 'shorten_url:create' %}">Generate URL</a></li>
     </ul>
   </div>
   <div>
